--- a/pawrty_backend/package.json
+++ b/pawrty_backend/package.json
@@ -3,8 +3,8 @@
     "node": ">= 4.0"
   },
   "dependencies": {
-    "deployd": "^1.0.0",
-    "dpd-dashboard": "^0.0.1",
-    "dpd-clientlib": "^0.0.1"
+    "deployd": "^1.2.0",
+    "dpd-clientlib": "^0.0.1",
+    "dpd-dashboard": "^0.0.1"
   }
 }
